video 8 acabado. Hemos creado las rutas con controladores y ponemos algo de contenido (en el indice y el about)

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,7 @@
-    <h1>Navigation</h1>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nulla laboriosam esse recusandae modi, nisi repudiandae cupiditate praesentium perferendis hic mollitia doloribus quae ipsum suscipit consectetur veniam.</p>
-
-    <h2>footer</h2>
+<div class="jumbotron mt-4">
+    <h1 class="display-4">Notes app</h1>
+    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam commodi deleniti esse placeat doloribus necessitatibus? Sunt similique deleniti amet dicta!</p>
+    <hr class="my-4">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non libero unde vel recusandae nulla dolorem architecto? Tempora, inventore quo. Alias.</p>
+    <a href="/" class="btn btn-primary">boton</a>
+</div>
