--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -6,7 +6,8 @@
             <div class="card-body">
                 <h4 class="card-title d-flex justify-content-between  align-items-center">{{title}} <a href="notes/edit/{{_id}}"><i class="fa fa-pencil"></i></a></h4>
                 <p>{{description}}</p>
-                <form action="/notes/delete/{{_id}}" method="POST">
+                <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
+                    <input type="hidden" name="_method" value="DELETE">
                     <button class="btn btn-danger btn-block btn-sm" type="submit">
                         DELETE
                     </button>
@@ -17,3 +18,5 @@
 
 {{/each}}
 </div>
+<br><br>
+<a href="/notes/add">Crear nota</a>
