Video 13 acabado. CRUD finalizado

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,5 +3,5 @@
     <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam commodi deleniti esse placeat doloribus necessitatibus? Sunt similique deleniti amet dicta!</p>
     <hr class="my-4">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non libero unde vel recusandae nulla dolorem architecto? Tempora, inventore quo. Alias.</p>
-    <a href="/views/notes" class="btn btn-primary">boton</a>
+    <a href="#" class="btn btn-primary">boton</a>
 </div>
